# rgb-strict-encoding

./: Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
rust/: Cargo.toml  README.md
rust/derive/: Cargo.toml  README.md
rust/derive/tests/: base.rs  dumb.rs  type.rs
rust/src/: bitcoin_types.rs  embedded.rs  lib.rs  macros.rs  stl.rs  types.rs
rust/test_helpers/: Cargo.toml
