[package]
name = "rgb-strict-encoding-derive"
version = { workspace = true }
description = "Strict encoding derivation macros"
keywords = ["strict-encoding", "proc-macro"]
categories = ["development-tools", "encoding"]
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
name = "strict_encoding_derive"
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = [
    "full",
] }
proc-macro2 = "1"
amplify_syn = "=2.0.1"
heck = "0.5.0"

[dev-dependencies]
rgb-strict-encoding = { path = ".." }
rgb-strict-encoding-test = { path = "../test_helpers" }
amplify = { workspace = true }
